--- a/styles/portofio.css
+++ b/styles/portofio.css
@@ -1,29 +1,31 @@
 :root {
-  --title-background-color: #254ba0;
-  --link-color: #17ace4;
-  --upper-toolbar-color: #404040;
-  --textbox-background-color: #eaeaea;
-  --title-link-font-color: white;
-  --standalone-title-font-color: #244ba0;
-  --default-font: "Ubuntu Mono", monospace;
-  --title-font: "Fugaz One", cursive;
+  --primary-background-color: #254ba0;
+  --secondary-background-color: #eaeaea;
+  --link-bachground-color: #17ace4;
+  --navigation-bar-color: #404040;
+  --primary-font-color: white;
+  --secondary-font-color: #244ba0;
+  --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  --default-font-family: "Ubuntu Mono", monospace;
+  --title-font-family: "Fugaz One", cursive;
 }
 
 body {
-  font-family: var(--default-font);
+  font-family: var(--default-font-family);
 }
 
 h1,
-.brand-name {
-  font-family: var(--title-font);
+.brand-name,
+.project-title {
+  font-family: var(--title-font-family);
 }
 
 .navigation-bar {
-  background-color: var(--upper-toolbar-color);
+  background-color: var(--navigation-bar-color);
 }
 
 .hero {
-  background-color: var(--textbox-background-color);
+  background-color: var(--secondary-background-color);
   text-align: center;
   padding: 160px 20px;
 }
@@ -40,4 +42,28 @@ h1,
 .hero h3 {
   font-size: 24px;
   font-weight: normal;
+}
+
+.project-title {
+  background-color: var(--primary-background-color);
+  border-radius: 4px;
+  padding: 15px 20px;
+  color: white;
+}
+
+.primary-link {
+  border-radius: 4px;
+  padding: 20px 15px;
+  text-decoration: none;
+  text-transform: capitalize;
+  background: var(--link-bachground-color);
+  box-shadow: var(--box-shadow);
+  color: white;
+}
+
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+  padding: 50px;
+  background-color: var(--secondary-background-color);
 }
